--- a/index.css
+++ b/index.css
@@ -16,6 +16,7 @@ header {
 
 header h1 {
     font-size: 4vh;
+    padding-left: 10px;
 }
 
 header img {
@@ -25,6 +26,15 @@ header img {
 
 header nav {
     display: none;
+}
+
+header nav a:hover{
+    border: 1px solid rgba(226, 141, 43, 0.747);;
+      background-color: rgba(226, 141, 43, 0.747);
+    border-radius: 5px;
+    color: white;
+    padding: 5px 25px;
+    width: 150px;
 }
 
 
@@ -38,6 +48,7 @@ header nav {
 
 .main1 img {
     height: 50vh;
+    
 }
 
 .section0 {
@@ -70,7 +81,7 @@ padding-top: 60px;
 
 /* estilo do cardapio*/
 .cardapio {
-    background-color: rgba(241, 241, 241, 0.87);
+    background-color: rgba(241, 241, 241, 0.582);
     display: flex;
     flex-direction: column;
     height: 250vh;
@@ -78,7 +89,8 @@ padding-top: 60px;
 
 .cardapio h1 {
     text-align: center;
-    font-size: 5vh;
+    font-size: 4vh;
+    padding-top: 10px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
@@ -94,8 +106,8 @@ padding-top: 60px;
 }
 
 .section1 img {
-    width: 90vw;
-    height: 50vh;
+    width: 80vw;
+    height: 40vh;
     padding-top: 10px;
 
 }
@@ -103,13 +115,13 @@ padding-top: 60px;
 .section1 h1 {
     font-size: 3vh;
     text-align: left;
-    padding-left: 10px;
+    padding-left: 30px;
     padding-top: 5px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .section1 p {
-    padding-left: 10px;
+    padding-left: 30px;
     padding-top: 5px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
@@ -122,8 +134,6 @@ padding-top: 60px;
 
 /* estilo do sobre*/
 .sobre {
-
-    margin-top: 20px;
     padding-bottom: 20px;
     display: flex;
     flex-direction: column;
@@ -134,10 +144,13 @@ padding-top: 60px;
     width: 93vw;
     height: 60vh;
     margin: auto;
+    padding-top: 10px;
 }
+
 
 .section2 h1 {
     text-align: center;
+    font-size: 3vh;
     padding-top: 6px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
@@ -172,7 +185,7 @@ footer p {
         padding: 0px 15px;
         color: black;
         text-decoration: none;
-        font-size: 2vh;
+        font-size: 2.5vh;
     }
     .main1{
         flex-direction: row;
@@ -213,7 +226,7 @@ footer p {
     height: 100vh;
 }
 .section2{
-  background-color: rgb(241, 241, 241);
+    background-color: rgb(219, 217, 217);
     height: 60vh;
     width: 100vw;
     margin:auto 
@@ -225,7 +238,8 @@ footer p {
 }
 .sobre img{
     margin-left: 20px;
-    height: 70vh;
+    width: 400px;
+    height: 80vh;
 }
 
 
@@ -245,6 +259,7 @@ footer p {
 }
 .sobre img{
     margin-left: 20px;
-    height: 80vh;
+    width: 500px;
+    height: 85vh;
 }
 }
