--- a/index.css
+++ b/index.css
@@ -5,8 +5,8 @@
 }
 
 header {
-    background-color: white;
-    height: 10vh;
+    background-color: rgb(252, 251, 251);
+    height: 10.3vh;
     position: fixed;
     width: 100vw;
     display: flex;
@@ -20,7 +20,7 @@ header h1 {
 }
 
 header img {
-    width: 35px;
+    width: 40px;
     margin-right: 15px;
 }
 
@@ -28,14 +28,7 @@ header nav {
     display: none;
 }
 
-header nav a:hover{
-    border: 1px solid rgba(226, 141, 43, 0.747);;
-      background-color: rgba(226, 141, 43, 0.747);
-    border-radius: 5px;
-    color: white;
-    padding: 5px 25px;
-    width: 150px;
-}
+
 
 
 .main1 {
@@ -69,7 +62,7 @@ padding-top: 60px;
 .taço {
     font-size: 4vh;
     text-align: center;
-    padding-bottom: 5px;
+    padding-bottom: 7px;
 
 }
 
@@ -81,13 +74,18 @@ padding-top: 60px;
 
 /* estilo do cardapio*/
 .cardapio {
-    background-color: rgba(241, 241, 241, 0.582);
+    background-image: url(../site_de_sopa/imagem_fundo/img8.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment:fixed;
     display: flex;
     flex-direction: column;
-    height: 250vh;
+    height: 500vh;
 }
 
 .cardapio h1 {
+    color: white;
     text-align: center;
     font-size: 4vh;
     padding-top: 10px;
@@ -100,8 +98,9 @@ padding-top: 60px;
     justify-content: center;
     align-items: center;
     width: 95vw;
-
-    background-color: rgb(255, 255, 255);
+    border-radius: 8px;
+    padding-top: 18px;
+    background-color: rgba(255, 255, 255, 0.781);
     margin: auto;
 }
 
@@ -113,6 +112,7 @@ padding-top: 60px;
 }
 
 .section1 h1 {
+    color: black;
     font-size: 3vh;
     text-align: left;
     padding-left: 30px;
@@ -151,7 +151,7 @@ padding-top: 60px;
 .section2 h1 {
     text-align: center;
     font-size: 3vh;
-    padding-top: 6px;
+    padding-top: 15px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
@@ -185,14 +185,15 @@ footer p {
         padding: 0px 15px;
         color: black;
         text-decoration: none;
-        font-size: 2.5vh;
+        font-size: 2.2vh;
     }
     .main1{
         flex-direction: row;
+    padding-top: 90px;
     }
     .main1 img{
         width: 55vw;
-        height: 100vh;
+        height: 92vh;
     }
     .section0 p{
         padding-bottom: 50px;
@@ -201,7 +202,8 @@ footer p {
     }
     /* estilo do cardapio*/
 .cardapio{
-    height: 100vh;
+    padding-top: 90px;
+    height: 220vh;
 }
     .cardapio h1{
         padding-top: 15px;
@@ -222,11 +224,12 @@ footer p {
     }
 /* estilo do sobre*/
 .sobre{
+    background-color: rgba(255, 255, 255, 0.815);
     flex-direction: row;
     height: 100vh;
 }
 .section2{
-    background-color: rgb(219, 217, 217);
+    background-color: rgba(221, 220, 220, 0.267);
     height: 60vh;
     width: 100vw;
     margin:auto 
@@ -248,8 +251,14 @@ footer p {
 
 @media screen and (min-width:992px) and (max-width:1280px) {
       header nav a {
-        padding: 0px 15px;
+        padding: 0px 25px;
     
+    }
+    .main1 {
+        padding-top: 76px;
+    }
+    .cardapio{
+        padding-top: 80px;
     }
     .section2 p{
     font-size:1.5vw ;
@@ -258,6 +267,7 @@ footer p {
 
 }
 .sobre img{
+    padding-top: 35px;
     margin-left: 20px;
     width: 500px;
     height: 85vh;
