--- a/index.css
+++ b/index.css
@@ -81,7 +81,7 @@ padding-top: 60px;
     background-attachment:fixed;
     display: flex;
     flex-direction: column;
-    height: 500vh;
+    height: 400vh;
 }
 
 .cardapio h1 {
@@ -97,17 +97,17 @@ padding-top: 60px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 95vw;
-    border-radius: 8px;
+    width: 80vw;
+    border-radius: 5px;
     padding-top: 18px;
     background-color: rgba(255, 255, 255, 0.781);
     margin: auto;
 }
 
 .section1 img {
-    width: 80vw;
-    height: 40vh;
-    padding-top: 10px;
+    width: 70vw;
+    height: 30vh;
+    padding-top: 3px;
 
 }
 
@@ -115,13 +115,13 @@ padding-top: 60px;
     color: black;
     font-size: 3vh;
     text-align: left;
-    padding-left: 30px;
+    padding-left: 20px;
     padding-top: 5px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .section1 p {
-    padding-left: 30px;
+    padding-left: 20px;
     padding-top: 5px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
@@ -214,7 +214,7 @@ footer p {
         height: 23vh;
     }
     .section1 img{
-        padding: 4px 8px;
+        padding: 0px 8px 15px 13px;
         width: 24vw;
         height: 21vh;
     
@@ -232,7 +232,7 @@ footer p {
     background-color: rgba(221, 220, 220, 0.267);
     height: 60vh;
     width: 100vw;
-    margin:auto 
+    margin:auto ;
 }
 .section2 p{
     font-size:2vw ;
